--- a/style.css
+++ b/style.css
@@ -20,11 +20,9 @@ body {
 
 form {
   margin-top: 50px;
-  height: 400px;
   width: 450px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   gap: 20px;
   padding: 20px;
   border-radius: 41px;
@@ -34,16 +32,42 @@ form {
 
 .case {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
 }
 
 label {
-  margin-right: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .msg {
   display: none;
-  text-align: center;
+  margin-top: 5px;
+  font-size: 0.85rem;
+}
+
+.error {
+  display: block;
+  color: red;
+}
+
+.success {
+  display: block;
+  color: green;
+}
+
+input {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+input.error {
+  border-color: red;
+}
+
+input.success {
+  border-color: green;
 }
 
 .btn {
@@ -52,7 +76,15 @@ label {
   align-items: center;
 }
 
-
-.btn .button {
+.button {
   padding: 10px;
+  cursor: pointer;
+  background-color: #6a0dad;
+  color: white;
+  border: none;
+  border-radius: 10px;
+}
+
+.button:hover {
+  background-color: #4e0679;
 }
